data/collection/fixes/descriptions/scala/scala-837
The following works:
```scala
scala> val x = "foo"
x: java.lang.String = foo

scala> Tuple2[x.type, x.type](x,x)
res0: (x.type, x.type) = (foo,foo)
```
But all of the following do not:
```scala
scala> val y = (x : x.type, x : x.type)
y: (java.lang.String, java.lang.String) = (foo,foo)

scala> val y : (x.type, x.type) = (x, x)
<console>:5: error: type mismatch;
 found   : (java.lang.String, java.lang.String)
 required: (x.type, x.type)
       val y : (x.type, x.type) = (x, x)
                                  ^

scala> val y : (x.type, x.type) = (x : x.type, x : x.type)
<console>:5: error: type mismatch;
 found   : (java.lang.String, java.lang.String)
 required: (x.type, x.type)
       val y : (x.type, x.type) = (x : x.type, x : x.type)
                                  ^
scala> val y : (x.type, x.type) = (x, x) : (x.type, x.type)
<console>:5: error: type mismatch;
 found   : (java.lang.String, java.lang.String)
 required: (x.type, x.type)
       val y : (x.type, x.type) = (x, x) : (x.type, x.type)
                                  ^
```